# kids-learning-app

./: .gitignore  FLUTTER_INSTALL.md  GITHUB_SETUP.md  HCI_PRINCIPLES.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RUNNING_THE_APP.md  SETUP.md  package.json  pubspec.yaml  tailwind.config.ts
api/: package-lock.json  package.json
api/scripts/: simulate.js
api/src/: analytics.js  server.js  store.js
backend/: CMakeLists.txt
backend/src/: Analytics.cpp  Analytics.h  Persistence.cpp  Persistence.h  Simulator.cpp  Simulator.h  Tick.cpp  Tick.h  TimeSeriesDB.cpp  TimeSeriesDB.h  main.cpp
frontend/: package-lock.json  package.json
frontend/components/: SymbolCard.js
frontend/pages/: index.js
frontend/styles/: globals.css
lib/: main.dart
lib/core/constants/: app_constants.dart
lib/core/models/: app_settings.dart  usage_data.dart
lib/core/theme/: app_theme.dart
lib/core/utils/: app_lifecycle_manager.dart  break_reminder_service.dart  text_to_speech_service.dart
lib/presentation/providers/: settings_provider.dart  usage_tracker_provider.dart
lib/presentation/screens/: home_screen.dart  (+6 more)
src/: App.tsx  index.css  tailwind.config.lov.json
src/components/: BottomNav.tsx  BreakReminder.tsx  MoodCheck.tsx
src/context/: AppContext.tsx  I18nContext.tsx
src/data/: gk-questions.json  gkTypes.ts  translations.json
src/i18n/: localeMeta.ts  types.ts
src/lib/: badges.ts  gamification.ts
src/pages/: Games.tsx  GeneralKnowledge.tsx  Index.tsx  Learn.tsx  NotFound.tsx  ParentDashboard.tsx  Progress.tsx  Scribble.tsx  Settings.tsx
web/: index.html
(+17 files in other folders)
